--- a/devboard-frontend/index.html
+++ b/devboard-frontend/index.html
@@ -7,6 +7,11 @@
     <title>Devboard</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="position.js"></script>
+    <script src="location.js"></script>
+    <script src="category.js"></script>
+    <script src="technology.js"></script>
+    <script src="main.js"></script>
   </head>
 
   <body>
@@ -57,43 +62,43 @@
             <div class="w-full sticky inset-0 hidden h-64 lg:h-auto overflow-x-hidden overflow-y-auto lg:overflow-y-hidden lg:block mt-0 border border-gray-400 lg:border-transparent bg-white shadow lg:shadow-none lg:bg-transparent z-20" style="top:5em;" id="menu-content">
                <ul class="list-reset">
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:border-purple-500 lg:hover:border-purple-500">
+                     <a href="javascript:renderPositions()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:border-purple-500 lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm text-gray-900 font-bold">Jobs</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
+                     <a href="javascript:renderLocations()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
                      <span class="pb-1 md:pb-0 text-sm">Locations</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
+                     <a href="javascript:renderCategories()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
                      <span class="pb-1 md:pb-0 text-sm">Job Roles</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
+                     <a href="javascript:renderTechnologies()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
                      <span class="pb-1 md:pb-0 text-sm">Technologies</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
+                     <a href="javascript:renderPositionForm()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-gray-400">
                      <span class="pb-1 md:pb-0 text-sm">Advertise Job</span>
                      </a>
                   </li>
                </ul>
             </div>
          </div>
-         <div id="container" class="w-full lg:w-4/5 p-8 mt-6 lg:mt-0 text-gray-900 leading-normal bg-white border border-gray-400 border-rounded">
+         <div class="w-full lg:w-4/5 p-8 mt-6 lg:mt-0 text-gray-900 leading-normal bg-white border border-gray-400 border-rounded">
             <!--Title-->
             <div class="font-sans">
-               <h1 id="title" class="font-sans break-normal text-gray-900 pt-6 pb-2 text-xl">All Positions</h1>
+               <h1 id="container-title" class="font-sans break-normal text-gray-900 pt-6 pb-2 text-xl">All Positions</h1>
                <hr class="border-b border-gray-400">
             </div>
 
             <!-- Job Tiles -->
-
-
+            <div id="positions-container" class="font-sans">
+            </div>
             <!--/ Job Tiles -->
 
          </div>
@@ -117,6 +122,5 @@
             </div>
          </div>
       </footer>
-    <script src="main.js"></script>
   </body>
 </html>
