--- a/devboard-frontend/index.html
+++ b/devboard-frontend/index.html
@@ -11,7 +11,6 @@
     <script src="location.js"></script>
     <script src="category.js"></script>
     <script src="technology.js"></script>
-    <script src="main.js"></script>
   </head>
 
   <body>
@@ -82,7 +81,7 @@
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="javascript:renderPositionForm()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                     <a id="advertise-job" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Advertise Job</span>
                      </a>
                   </li>
@@ -122,5 +121,6 @@
             </div>
          </div>
       </footer>
+      <script src="main.js"></script>
   </body>
 </html>
