--- a/devboard-frontend/index.html
+++ b/devboard-frontend/index.html
@@ -61,22 +61,22 @@
             <div class="w-full sticky inset-0 hidden h-64 lg:h-auto overflow-x-hidden overflow-y-auto lg:overflow-y-hidden lg:block mt-0 border border-gray-400 lg:border-transparent bg-white shadow lg:shadow-none lg:bg-transparent z-20" style="top:5em;" id="menu-content">
                <ul class="list-reset">
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="javascript:renderPositions()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                     <a id="positions-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Jobs</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="javascript:renderLocations()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                     <a id="locations-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Locations</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="javascript:renderCategories()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                     <a id="categories-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Job Roles</span>
                      </a>
                   </li>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
-                     <a href="javascript:renderTechnologies()" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                     <a id="technologies-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Technologies</span>
                      </a>
                   </li>
