add filter links to menu

--- a/devboard-frontend/index.html
+++ b/devboard-frontend/index.html
@@ -62,9 +62,20 @@
                <ul class="list-reset">
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
                      <a id="positions-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
-                     <span class="pb-1 md:pb-0 text-sm">Jobs</span>
+                     <span class="pb-1 md:pb-0 text-sm">All Positions</span>
                      </a>
                   </li>
+                  <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
+                     <a id="filter-by-salary" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                        <span class="pb-1 md:pb-0 text-sm">Positions By Salaries</span>
+                      </a>
+                  </li>
+                  <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
+                     <a id="filter-by-company" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                        <span class="pb-1 md:pb-0 text-sm">Positions By Company</span>
+                      </a>
+                  </li>
+                   <hr>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
                      <a id="locations-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Locations</span>
@@ -80,6 +91,7 @@
                      <span class="pb-1 md:pb-0 text-sm">Technologies</span>
                      </a>
                   </li>
+                  <hr>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
                      <a id="advertise-job" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
                      <span class="pb-1 md:pb-0 text-sm">Advertise Job</span>
