add reverse salaries filter

--- a/devboard-frontend/index.html
+++ b/devboard-frontend/index.html
@@ -75,6 +75,11 @@
                         <span class="pb-1 md:pb-0 text-sm">Positions By Company</span>
                       </a>
                   </li>
+                  <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
+                     <a id="filter-by-salary-reversed" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
+                        <span class="pb-1 md:pb-0 text-sm">Positions By Salaries reversed</span>
+                      </a>
+                  </li>
                    <hr>
                   <li class="py-2 md:my-0 hover:bg-purple-100 lg:hover:bg-transparent">
                      <a id="locations-link" href="#" class="block pl-4 align-middle text-gray-700 no-underline hover:text-purple-500 border-l-4 border-transparent lg:hover:border-purple-500">
